<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/exit_dialog_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/medium_margin">

        <TextView
            android:id="@+id/tv_actionIcon"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:background="@drawable/exit_icon" />

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/exit_app_string"
            android:textAllCaps="false"
            android:textColor="@color/exit_text"
            android:textSize="@dimen/xmedium_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        android:padding="@dimen/medium_margin">

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/btn_exit"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/frame_inside_color"
            android:textSize="@dimen/small_text" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_cancel"
            android:text="@string/cancel"
            android:layout_marginLeft="5dp"
            android:textAllCaps="false"
            android:textColor="@color/frame_inside_color"
            android:textSize="@dimen/small_text" />

    </LinearLayout>

</LinearLayout>