<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <FrameLayout
        android:id="@+id/fl_finalPIP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".74">

        <ImageView
            android:id="@+id/iv_blurImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/iv_selectedImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/iv_maskImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/iv_frameImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".26"
        android:background="@drawable/bottom_bg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/frames"
                android:textAllCaps="false"
                android:textColor="@color/frame_inside_color"
                android:textSize="@dimen/textsize" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/tab_devider" />

            <TextView
                android:id="@+id/tv_foreground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/foreground"
                android:textAllCaps="false"
                android:textColor="@color/frame_inside_color"
                android:textSize="@dimen/textsize" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/tab_devider" />

            <TextView
                android:id="@+id/tv_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/background"
                android:textAllCaps="false"
                android:textColor="@color/frame_inside_color"
                android:textSize="@dimen/textsize" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/tab_devider" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tab_devider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
